[gd_scene load_steps=2 format=3 uid="uid://bb6r1oi2vvi7r"]

[ext_resource type="Script" path="res://Scripts/Scene Scripts/CultivateWindow.gd" id="1_cux5j"]

[node name="CultivateWindow" type="Node"]
script = ExtResource("1_cux5j")

[node name="Window" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="Window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -210.0
offset_right = 320.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Window/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="TopTextLbl" type="Label" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Select how many days you would like to spent in cultivating "
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Window/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="DaySlider" type="HSlider" parent="Window/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
max_value = 360.0
value = 1.0

[node name="DayLbl" type="Label" parent="Window/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Window/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmBtn" type="Button" parent="Window/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="BackBtn" type="Button" parent="Window/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="Window/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/DaySlider" to="." method="_on_day_slider_value_changed"]
[connection signal="pressed" from="Window/PanelContainer/VBoxContainer/HBoxContainer/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="pressed" from="Window/PanelContainer/VBoxContainer/HBoxContainer/BackBtn" to="." method="_on_back_btn_pressed"]
